bugfix: set min height for breadcrumbs-wrap #EL-6

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -28,3 +28,7 @@ input.add-to-cart-detail-number {
 .img-product-small {
     height: 100px;
 }
+
+div.breadcrumbs-wrap {
+    min-height: 253px;
+}
